# octave-miscellaneous

./: .hgtags  DESCRIPTION  INDEX  Makefile  NEWS  README.md  _config.yml
inst/: hilbert_curve.m  physical_constant.py  read_options.m  textable.m  units.m
miscellaneous/: functions.md  index.md  news.md
miscellaneous/functions/: ascii.md  cell2cell.md  chebyshevpoly.md  clip.md  colorboard.md  csv2latex.md  gameoflife.md  hc2ind.md  hermitepoly.md  hilbert_curve.md  idxmatrix.md  infoskeleton.md  laguerrepoly.md  legendrepoly.md  match.md  normc.md  normr.md  nze.md  partcnt.md  partint.md  peano_curve.md  physical_constant.md  read_options.md  reduce.md  rolldices.md  sample.md  slurp_file.md  solvesudoku.md  text_waitbar.md  textable.md  truncate.md  units.md  z_curve.md  zagzig.md  zigzag.md
src/: Makefile.in  bootstrap  cell2cell.cc  configure.ac  partint.cc  sample.cc  text_waitbar.cc
